@startuml Klassendiagramm

class Cardmanagement{
    - User : user
    - Menu : menu
    - r : ReadWrite
    - loggedIn: boolean
    - myShop : Shop
    - myCardslist : Cardslist

    +logIn() : void
    +logOut() : void
    +getLoggedIn() : boolean
    +getUser() : User
    +getshop() : Shop
    



}


class Menu{
    -sc : Scanner(System.in)
    -write : ReadWrite
    -rand : Random
    myCardmanagement : Cardmanagement

    +menustart() : String
    +createUser() : User
    +logOut(pCardmanagement : Cardmanagement) : void
    +showInventory() : Inventory
    +showMoney(pUser : User, pCardmanagement : Cardmanagement) : void
    +showProfile(pUser : User, pCardmanagement : Cardmanagement) : void
    +showMenu() : int
    +showShop() : Shop
    +breakLine() : void
    +menumanin(pCardmanagement : Cardmanagement) : void


}


class Shop{
    -ladeTheke[] : Cards
    -myCardslist : Cardslist
    -presentUser : User 
    +antwort2 : String
    antwort3 : int
    scanner : Scanner(System.in)
    
    +showCards(pCards: Cards) : void
    +showShop() : void
    +buyCard() : void

}


class User{
    -username : String
    -password : String
    -userID : int
    -money : double


    +User(pUsername : String, pPassword : String, pUserID : int, pMoney : double)
    +setUsername(pUsername : String) : void
    +getUsername() : String
    +setPassword(pPassword : String) : void
    +changePassword(pPassword : String) : void
    +setUserID(pUserID : int) : void
    +getUserID() : int
    +setMoney(pMoney : double) : void
    +getMoney() : double
    +addmoney(pMoney : String) : void
    +checkpassword(pPassword : String) :void
    +checkusername(pUsername : String) :void

}


class Person{
    -name: String
    -age: int

    +Person(pName : String, pAge : int)
    +setName(pName : String) : void
    +getName(): String
    +setAge(pAge: int) : void
    +getAge() : int
}


class Cards{
    -rarity : String
    -name : String
    -cardID : int
    -price: double

    +showName() : void
    +showRarity() : void
    +showPrice() : void
    +showCardID(): void
    +setName(pName : String) : void
    +setRarity(pRarity : String) : void
    +setPrice(pPrice : double) : void
    +setCardID(pCardID : int) : void
    +getName() : String
    +getRarity() : String
    +getPrice() : double
    +getCardID() : int
    +toString() : String
}


class Inventory{
    cards[] : Cards

    +textInventory() : int 
    +mainInventory() : void
    -showCards() : void
    +sellCard() : void
    +giveMoney() : void
    -breakLine() : void
    +addCard(pCard : Cards) : void
}


class Cardslist{
    +randomCard() : void
}

class ReadWrite{
    - sc : Scanner(System.in)

    + writeLogin(pUser : User) : void
    + writeUserlist(pUser : User) : void
    + readLogIn(pUser : User) : void
    + checkUsername(pUsername : String) : boolean
}

Cardmanagement *-- "1" Menu : hat ein Menu
Cardmanagement *-- "1" ReadWrite : hat einen Reader/Writer 
User *-- "1" Inventory : hat ein Inventar
Cardmanagement *-- "1" User : hat 1 User
Menu *-- "1" Shop : hat einen Shop
Menu *-- "1" ReadWrite : hat einen writer
Shop *-- "5" Cardslist : hat 5 Karten 
Inventory *-- "20" Cardslist : hat 20 Karten
Cardslist *-- "151" Cards : hat 151 Karten
Person <|-- User : User erbt von Person

@enduml